# BSTKCHAT

./: .gitignore  README.md  pyproject.toml  setup.py
bstkchat/: cli.py  crypto.py  network.py  ui.py
tests/: test_crypto.py  test_ui.py
